# betaflight

./: .gitignore  altitude_hold_demo.py  iris_betaflight.world  iris_betaflight_v2.world  rc_control.py  run_gazebo_betaflight.sh  run_sitl.sh  test_gps_sitl.py  test_motor_direct.py
betaflight_gazebo_plugin/: BetaflightPlugin.cc  BetaflightPlugin_v2.cc  CMakeLists.txt
models/iris_betaflight_custom/: model.config  model.sdf
models/iris_betaflight_model/: model.sdf
models/iris_with_standoffs/: model.sdf
src/main/drivers/: gps_virtual.c  gps_virtual.h
src/main/fc/: core.c
src/main/rx/: msp.c
